# C-Compiler

./: .gitignore  CMakeLists.txt  IR.cpp  IR.hpp  Makefile  README.md  Symbol.cpp  abs.c  abs.cpp  abs.h  abs.hpp  abstract_tree.h  c.l  c.tab.c  c.y  function.cpp  function.hpp  hashtable.c  hashtable.h  ir_tree.dot  lex.yy.c  main.c  out.asm  parser.h  push.sh  report_11.docx  semant.cpp  semant.hpp  sement.cpp  sement.hpp  symbol.cpp  symbol.hpp  test.c  test.md  test.sh  util.c  util.cpp  util.h  util.hpp  y.output  (+3 more)
test/: Makefile  hashtable.c  hashtable.h
testcase/: 1.txt  2.txt  3.txt
